Wed Sep 15 13:37:00 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/imap/test_imap.rb: "localhost" not guaranteed to
	  resolve to "127.0.0.1".  On my machine it is "::1" instead.
	  The problem is, you have to connect to the imaps server via
	  the canonical name written in a server certificate, and that
	  of the server.cert is "localhost".  So you have to listen to
	  the address of what "localhost" resolves to.  I think this
	  situation cannot be resolved in a handy manner because the
	  test "test_imaps_post_connection_check" is actually
	  expecting to connect to a server via an address other than
	  the CN.  On my machine several assertions won't pass because
	  the test cannot connect to the server.

Wed Sep 15 09:12:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_puts): fix for wide char encoding strings.
	  [ruby-dev:42212]

Wed Sep 15 07:27:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_times): mentioned about Hash argument.  a patch
	  from Daniel Bovensiepen at [ruby-core:32386].

	* sprintf.c (get_hash): ditto, and fix typo.

Wed Sep 15 07:22:20 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_entries): Pathname#entries translated
	  from pathname.rb.

Wed Sep 15 02:13:44 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/closure.c : Don't use FFI closure alloc on OpenBSD.
	  Thanks Jeremy Evans! [ruby-core:32384]

Tue Sep 14 20:17:48 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_s_getwd): Pathname.getwd and
	  Pathname.pwd translated from pathname.rb.

Tue Sep 14 05:13:04 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_s_glob): Pathname.glob translated
	  from pathname.rb.

Tue Sep 14 01:24:51 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__aix): suppress a
	  warning.

Mon Sep 13 20:48:30 2010  Tanaka Akira  <akr@fsij.org>
