@@ -1,3 +1,8 @@
+Wed Sep 15 21:07:06 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_mkdir): Pathname#mkdir translated
+	  from pathname.rb.
+
 Wed Sep 15 13:37:00 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* test/net/imap/test_imap.rb: "localhost" not guaranteed to
